<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- General -->
    <string name="app_name">Chronox</string>
    <!-- Menu -->
    <string name="menu_checkview">Avcheckning</string>
    <string name="menu_statistics">Statistik</string>
    <string name="menu_timestamp">Tidslogg</string>
    <string name="menu_schedule">Schemavy</string>
    <string name="menu_settings">Inställningar</string>
    <string name="menu_backup">Export (Backup)</string>
    <!-- Activities -->
    <string name="title_activity_timestamp">Tidslogg</string>
    <string name="title_activity_new_order">Editera block</string>
    <string name="title_activity_list">Avcheckning</string>
    <string name="title_activity_backup">Export (Backup)</string>
    
    <string name="taskDate"></string>
    <string name="taskStart"></string>
    <string name="taskStop"></string>
    <string name="comments">Kommentar</string>
    <string name="trash">&#xf014;</string>
    <string name="edit">&#xf044;</string>
    <string name="comment">&#xf075;</string>
    <string name="orderNumber">Ordernummer</string>
    <string name="addOrderButton">Spara</string>
    <string name="addedOrder"></string>
    <string name="delete">Ta bort</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="newBlock">Manuell rapportering</string>
    <string name="addNewOrderNumber">Ny order</string>
    <string name="orderName">Namn</string>
    <string name="chooseDateExportText">Välj mellan vilka datum du vill exportera:</string>
    
    <string name="fa_arrow_right">&#xf105;</string>
    <string name="fa_arrow_left">&#xf104;</string>
    <string name="fa_plus">&#xf067;</string>
    <string name="fa_square">&#xf0c8;</string>
    
    <string name="deselectAll">Börja om</string>
    <string name="selectAll">Bekräfta alla</string>
     
    <color name="green">#57BF23</color>
    <color name="oliveGreen">#cff9b9</color>
    <color name="red">#FB3804</color>
    <color name="white">#FFFFFF</color>
    <color name="yellow">#FCFDB4</color>
    <color name="blue">#FFC700</color>
    
    <string name="userName">Användarnamn</string>
    <string name="passWord">Lösenord</string>
    <string name="nextDay">Nästa</string>
    <string name="action_settings">Settings</string>
    <!-- Colors -->
    <color name="orange">#F88621</color>
    <color name="lightOrange">#f9bb85</color>
    <color name="lightGreen">#a3d987</color>
    <color name="darkGrey">#787878</color>
    <color name="lightGrey">#999</color>
    <color name="veryLightGrey">#CDC9C9</color>
    

    <color name="title_background">#0000FF</color>
    <color name="deleteColor">#88FF0000</color>
    <color name="editColor">#88ffffff</color>
    <color name="commentColor">#88888888</color>
</resources>
