<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_checkview"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_checkview"/>
    
    <item
      android:id="@+id/menu_statistics"
      android:orderInCategory="100"
      android:showAsAction="never"
      android:title="@string/menu_statistics"/>
   
   <item
      android:id="@+id/menu_timestamp"
      android:orderInCategory="100"
      android:showAsAction="never"
      android:title="@string/menu_timestamp"/>
       
   <item
      android:id="@+id/menu_settings"
      android:orderInCategory="100"
      android:showAsAction="never"
      android:title="@string/menu_settings"/>
 
   <item
       android:id="@+id/menu_backup"
       android:orderInCategory="100"
       android:showAsAction="never"
       android:title="@string/menu_backup"/>  
   
</menu>
