<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <Button
    android:id="@+id/taskDate"
    android:layout_width="wrap_content"
    android:textSize="30sp"
    android:layout_height="80dp"
    android:text="@string/taskDate"
    android:background="@android:color/transparent" 
    android:gravity="center" 
    android:layout_gravity="center"
    android:onClick="changeDate"/> 
    
    <LinearLayout
    android:layout_width="fill_parent"
 	android:layout_height="wrap_content"
 	android:id="@+id/LinearLayout02"
	android:orientation="horizontal">
    
	    <Button
	    android:id="@+id/taskStart"
	    android:layout_width="wrap_content"
	    android:textSize="30sp"
	    android:layout_height="80dp"
	    android:width="0dp"
	    android:layout_weight="3"
	    android:text="@string/taskStart"
	    android:background="@android:color/transparent" 
	    android:onClick="changeStart"/> 
	    
	    <TextView
	    android:id="@+id/arrow"
	    android:layout_width="wrap_content"
	    android:textSize="30sp"
	    android:layout_height="40dp"
	    android:width="0dp"
	    android:layout_weight="1"
	    android:text="@string/fa_arrow_right"
	    android:background="@android:color/transparent" 
	    android:gravity="center"
	    android:onClick="changeStart"/> 
	    
	    <Button
	    android:id="@+id/taskStop"
	    android:layout_width="wrap_content"
	    android:textSize="30sp"
	    android:layout_height="80dp"
	    android:width="0dp"
	    android:layout_weight="3"
	    android:text="@string/taskStop"
	    android:background="@android:color/transparent" 
	    android:onClick="changeStop"/> 
    
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/LinearLayout03"
        android:layout_width="match_parent"
    	android:layout_height="fill_parent"
   		android:orientation="vertical"
   		android:gravity="bottom">

            <LinearLayout
                android:id="@+id/LinearLayout04"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="80dp">   
                                 
                <Spinner
	                android:id="@+id/spinner1"
	                android:layout_weight="2"
	                android:layout_width="0dp"
	                android:layout_height="fill_parent"
	                android:text="Ordernummer"
                 />
             
             <Button
                android:id="@+id/button2"
                android:background="@color/orange"
                android:textColor="@color/white"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:onClick="addNewOrderNumber"
                android:layout_gravity="center"
                android:text="@string/fa_plus"
                android:textSize="30dp"/>
               
            </LinearLayout>
    
            <EditText
                android:id="@+id/editTextComments"
                android:layout_width="fill_parent"
                android:layout_height="80sp"
                android:ems="10"
                android:hint="@string/comments" 
                android:textSize="30sp"
                android:gravity="bottom"
                />
            
		<LinearLayout
		    	android:id="@+id/LinearLayout05"
		        android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		   		android:orientation="horizontal"
		   		android:background="@color/lightGrey">
             
		    <Button
                android:id="@+id/button1"
                android:background="@color/orange"
                android:textColor="@color/white"
                android:layout_height="80sp"
                android:layout_width="fill_parent"
                android:onClick="addNewOrder"
                android:text="@string/addOrderButton" 
                android:textSize="30sp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="20dp"/>
		    
		     </LinearLayout>
		    
		    <LinearLayout
		    	android:id="@+id/LinearLayout06"
		        android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		   		android:orientation="horizontal"
		   		android:background="@color/lightGrey">
		     
            <Button
                android:id="@+id/deleteButton"
                android:background="@color/red"
                android:textColor="@color/white"
                android:layout_height="80sp"
                android:layout_width="fill_parent"
                android:text="@string/delete"
                android:textSize="30sp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="30dp"/> 
                         
       </LinearLayout>

            
     </LinearLayout>
     
     
</RelativeLayout>
     
